--- a/challenge/test_challenge.ipynb
+++ b/challenge/test_challenge.ipynb
@@ -45,21 +45,19 @@
     }
    ],
    "source": [
-    "def romanToInt(self, s):\n",
-    "        \"\"\"\n",
-    "        :type s: str\n",
-    "        :rtype: int\n",
-    "        \"\"\"\n",
-    "        if not s:\n",
-    "            return 0\n",
+    "def romanToInt(s):\n",
+    "     \n",
     "        dic = {\"I\":1, \"V\":5, \"X\":10, \"L\":50, \"C\":100, \"D\":500, \"M\":1000}\n",
-    "        n = len(s)\n",
-    "        total = dic[s[n-1]]\n",
-    "        for i in range(n-1,0,-1):\n",
-    "            current = dic[s[i]]\n",
-    "            prev = dic[s[i-1]]\n",
-    "            total += prev if prev >= current else -prev\n",
-    "        return total"
+    "        num = 0\n",
+    "        last = \"I\"\n",
+    "        for input in s[::-1]:\n",
+    "            if dic[input] < dic[last]:\n",
+    "              num -= dic[input]\n",
+    "            else:\n",
+    "              num += dic[input]\n",
+    "            last = input\n",
+    "        return num\n",
+    "          "
    ]
   },
   {
@@ -73,18 +71,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3.10 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "assert  58  ==  romanToInt(\"LVIII\")\n",
@@ -96,7 +83,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big(O):"
+    "##### Big(O):\n",
+    "i think it is a O(N^2)"
    ]
   },
   {
@@ -125,8 +113,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3.10 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def singleNumber(nums):\n",
+    "  return reduce((lambda x, y: x ^ y), nums)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,7 +168,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,8 +193,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3.10 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "def moveZeroes(nums):\n",
+    "     \n",
+    "        l = 0\n",
+    "        for r in range(len(nums)):\n",
+    "            if nums[r]:\n",
+    "                nums[l], nums[r] = nums[r], nums[l]\n",
+    "                l = l + 1\n",
+    "        return nums"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,7 +244,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O(N^2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,7 +270,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " def longestCommonPrefix(strs):\n",
+    "      \n",
+    "        res = \"\"\n",
+    "        for i in range(len(strs[0])):\n",
+    "            for s in strs:\n",
+    "                if i == len(s) or s[i] != strs[0][i]:\n",
+    "                    return res\n",
+    "            res += strs[0][i]\n",
+    "            \n",
+    "        return res"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,7 +311,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O(N^2)"
+   ]
   }
  ],
  "metadata": {
