--- a/challenge/test_challenge.ipynb
+++ b/challenge/test_challenge.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "source": [
     "##### Big(O):\n",
-    "i think it is a O(N^2)"
+    "i think it is a O(N)"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O(1)"
+    "O(N)"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O(N^2)"
+    "O(N)"
    ]
   },
   {
